[package]
edition      = "2021"
name         = "m39_tft_text"
rust-version = "1.86"
version      = "0.1.0"

[[bin]]
name = "m39_tft_text"
path = "./src/bin/main.rs"

[dependencies]
defmt                  = "1.0.1"
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32"] }
esp-hal                = { version = "=1.0.0-rc.0", features = ["defmt", "esp32", "unstable"] }

critical-section = "1.2.0"
esp-println      = { version = "0.15.0", features = ["defmt-espflash", "esp32"] }

embedded-hal-bus = { version = "0.1" }
display-interface-spi = "0.5"
ili9341 = "0.6.0"
embedded-graphics = "0.8.1"
profont = "0.7.0"



[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
